# card-engine

./: .dockerignore  CLAUDE.md  DATA_PIPELINE.md  Dockerfile  HANDOFF.md  PLAYBOOK.md  fly.toml  pyproject.toml
schema/: 001_initial.sql  002_migrate_obo.sql  003_migrate_alities.sql  004_search_index.sql  005_family_tree.sql  006_deck_tiers.sql  007_reports.sql  008_players_sessions.sql  009_family_access.sql  010_family_deck_editing.sql  011_quarantine.sql  012_trgm_index.sql
scripts/: bulk_generate.py  dedup_local.py  dedup_trgm.py  quality_check.py  trivia_check.py
server/: app.py  db.py  models.py
server/adapters/: flashcards.py  generic.py  players.py  quality.py  reports.py  studio.py  trivia.py
server/family/: db.py  engine.py  generator.py  llm_client.py  models.py  routes.py
server/providers/: __init__.py  categories.py  daemon.py  dedup.py  difficulty.py  difficulty_routes.py  openai_provider.py  routes.py
server/providers/quality/: __init__.py  answer_in_question.py  dedup.py  veracity.py
